--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "express-react-boilerplate": "^4.2.1",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
