--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^16.13.1",
     "react-ace": "^9.1.4",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^16.13.1",
     "recoil": "0.0.9",
