fix server scripts and add routes

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "codelocker",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "homepage": "https://github.com/MarkKelly00/codeLocker",
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0",
