--- a/package.json
+++ b/package.json
@@ -1,65 +1,28 @@
 {
-  "name": "codelocker",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://github.com/MarkKelly00/codeLocker",
-  "dependencies": {
-    "@craco/craco": "^5.7.0",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@tailwindcss/ui": "^0.6.2",
-    "@tailwindui/react": "^0.1.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^3.4.2",
-    "@testing-library/user-event": "^7.2.1",
-    "ace-builds": "^1.4.12",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.19.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "express-react-boilerplate": "^4.2.1",
-    "mongoose": "^5.10.7",
-    "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-ace": "^9.1.4",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.13.1",
-    "recoil": "0.0.9",
-    "stylelint-config-standard": "^20.0.0",
-    "tailwindcss": "^1.8.10",
-    "typesafe-actions": "^5.1.0"
-  },
+  "name": "mern",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "if-env": "^1.0.4"
   }
 }
