transition working for profile drop down

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@tailwindui/react": "^0.1.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "tailwindcss": "^1.8.12"
   }
 }
