--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@auth0/auth0-react": "^1.1.0",
     "@craco/craco": "^5.7.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@tailwindui/react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/react-hooks": "^3.4.2",
