--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "stylelint-config-standard": "^20.0.0"
   },
   "dependencies": {
     "@tailwindui/react": "^0.1.1",
