new about page and deactivate modal functioning with route

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ REACT_APP_AUTH0_DOMAIN=dev-e0kk6pg3.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=Kp5dMVqPxEzovXVjECEiWbY4P8IbG2O1
 
 MONGODB_URI = mongodb+srv://dbUser:W0nd3rs!@cluster0.8kaqj.mongodb.net/codelocker?retryWrites=true&w=majority
+
+development db used to store test information
