--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "moment": "^2.29.1",
     "mongoose": "^5.3.16",
     "popper.js": "1.15.0",
     "react-dom": "^16.14.0",
