--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-table": "^7.6.2",
     "react-test-renderer": "^16.13.1",
     "recoil": "0.0.9",
     "stylelint-config-standard": "^20.0.0",
